--- a/configuration/data/email-settings.json
+++ b/configuration/data/email-settings.json
@@ -23,12 +23,28 @@
     "bodyPartial": "emails_hours_verify_body",
     "metaData": {}
   },
-  "hours-verify-reminder": {
+  "reminder": {
     "mailgunConnection": "mg_saltireawards",
     "from": "Saltire Awards <support@saltireawards.scot>",
     "replyTo": "Saltire Awards <support@saltireawards.scot>",
     "sendIfEmpty": false,
     "bodyPartial": "emails_hours_verify_reminder_body",
+    "metaData": {}
+  },
+  "second_reminder": {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_hours_verify_reminder_body",
+    "metaData": {}
+  },
+  "tsi_email": {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_hours_verify_tsi_email_body",
     "metaData": {}
   },
   "welcome": {
