--- a/configuration/data/email-settings.json
+++ b/configuration/data/email-settings.json
@@ -5,6 +5,7 @@
     "replyTo": "Saltire Awards <support@saltireawards.scot>",
     "sendIfEmpty": false,
     "bodyPartial": "emails_parental_approval_body",
+    "subject": "Parental Approval Email",
     "metaData": {}
   },
   "tsi-approval": {
@@ -21,6 +22,24 @@
     "replyTo": "Saltire Awards <support@saltireawards.scot>",
     "sendIfEmpty": false,
     "bodyPartial": "emails_hours_verify_body",
+    "metaData": {}
+  },
+  "hours-verify-reject": {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_hours_verify_reject_body",
+    "subjectPartial": "emails_hours_verify_reject_subject",
+    "metaData": {}
+  },
+  "hours-verify-success": {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_hours_verify_complete_body",
+    "subjectPartial": "emails_hours_verify_complete_subject",
     "metaData": {}
   },
   "reminder": {
