drafts and logic of all action emails complete

--- a/configuration/data/email-settings.json
+++ b/configuration/data/email-settings.json
@@ -33,7 +33,7 @@
     "subjectPartial": "emails_hours_verify_reject_subject",
     "metaData": {}
   },
-  "hours-verify-success": {
+  "hours-verify-complete": {
     "mailgunConnection": "mg_saltireawards",
     "from": "Saltire Awards <support@saltireawards.scot>",
     "replyTo": "Saltire Awards <support@saltireawards.scot>",
