new code, does complete actions with saltire codes, and tells us if they get low

--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -24,6 +24,7 @@
       "noreply": "noreply@saltireawards.scot",
       "technical": "webhelpdesk@scvo.org.uk"
     },
+    "youngScotSettings": "{:./data/young-scot-settings.json}",
     "emailSendSettings": "{:./data/email-settings.json}",
     "theme": {
       "primary": "#008EDF",
