--- a/configuration/data/email-settings.json
+++ b/configuration/data/email-settings.json
@@ -73,5 +73,13 @@
     "sendIfEmpty": false,
     "bodyPartial": "emails_welcome_body",
     "metaData": {}
+  },
+  "ys-code-reminder" : {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_ys_code_reminder",
+    "metaData": {}
   }
 }
