--- a/configuration/data/email-settings.json
+++ b/configuration/data/email-settings.json
@@ -16,6 +16,15 @@
     "bodyPartial": "emails_admin_approval_body",
     "metaData": {}
   },
+  "request-printed-certificate": {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_request_printed_certificate_body",
+    "metaData": {}
+  },
+
   "hours-verify": {
     "mailgunConnection": "mg_saltireawards",
     "from": "Saltire Awards <support@saltireawards.scot>",
