--- a/configuration/data/email-settings.json
+++ b/configuration/data/email-settings.json
@@ -51,6 +51,15 @@
     "subjectPartial": "emails_hours_verify_complete_subject",
     "metaData": {}
   },
+  "award_claim_complete": {
+    "mailgunConnection": "mg_saltireawards",
+    "from": "Saltire Awards <support@saltireawards.scot>",
+    "replyTo": "Saltire Awards <support@saltireawards.scot>",
+    "sendIfEmpty": false,
+    "bodyPartial": "emails_award_claim_complete_body",
+    "subjectPartial": "emails_award_claim_complete_subject",
+    "metaData": {}
+  },
   "reminder": {
     "mailgunConnection": "mg_saltireawards",
     "from": "Saltire Awards <support@saltireawards.scot>",
