--- a/configuration/data/common-tasks.json
+++ b/configuration/data/common-tasks.json
@@ -189,6 +189,17 @@
 			]
 		}
 	},
+	"getAwardInfo": {
+		"name": "awardInfo",
+		"taskModule": "render",
+		"renderer": "handlebars",
+		"config": {
+			"output": "data",
+			"template": ">context.metaData.handlebars.templates.volunteering_get-award-info",
+			"parseJson": true
+		}
+	},
+
 	"volunteeringTermsMaps": {
 		"name": "termsMaps",
 		"taskModule": "render",
