--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "typedarray-to-buffer": "^3.1.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "3.11.0",
     "webpack-cli": "^3.2.3",
