--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
-- 10.16.0
+- 10.16.3
 branches:
   only:
   - production
 cache:
-  npm: true
+  npm: false
 before_install:
 - openssl aes-256-cbc -K $encrypted_3b0c5d25269c_key -iv $encrypted_3b0c5d25269c_iv
   -in secret.json.enc -out secret.json -d
