whole load of work to make cert urls a one-stop-shop for TSIs. Sadly this makes them a one-call-per Cert issue, but it's very, very hard to cache this, as it'd be dangerous to get all of a group admins awards (they could have thousands)

--- a/configuration/data/common-tasks.json
+++ b/configuration/data/common-tasks.json
@@ -164,6 +164,17 @@
 			"apexClassPath": "/SaltireTask/?user_id={{@root.request.params.query.user_id}}"
 		}
 	},
+	"getAwardsInfoExternal": {
+		"name": "awardsInfo",
+		"taskModule": "salesforceApex",
+		"renderer": "handlebars",
+		"config": {
+			"connection": "scvoAlexSandbox",
+			"output": "data",
+			"method": "GET",
+			"apexClassPath": "/SaltireAward/?user_id={{@root.request.params.query.user_id}}&award_id={{@root.request.params.award_id}}"
+		}
+	},
 	"hoursCodeVerify": {
 		"name": "codeVerified",
 		"taskModule": "render",
