reformat home page

--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -16,7 +16,7 @@
     "tagline": "Celebrating youth volunteering in Scotland",
     "certificateName": "Saltire Award",
     "accountName": "My Saltire",
-    "url": "https://test.saltireawards.scot",
+    "url": "https://saltireawards.scot",
     "twitter": "saltireawards",
     "contacts": {
       "admin": "support@saltireawards.scot",
