--- a/configuration/routes/024-approval.json
+++ b/configuration/routes/024-approval.json
@@ -19,7 +19,7 @@
       "taskModule": "salesforceApex",
       "renderer": "handlebars",
       "config": {
-        "connection": "scvoAlexSandbox",
+        "connection": "scvoMiloProduction",
         "output": "data",
         "method": "GET",
         "apexClassPath": ">data.apexUrl"
@@ -57,7 +57,7 @@
       "taskModule": "salesforceApex",
       "renderer": "handlebars",
       "config": {
-        "connection": "scvoAlexSandbox",
+        "connection": "scvoMiloProduction",
         "output": "data",
         "method": "POST",
         "body": ">context.metaData.handlebars.templates.account_auth_approval-body",
