--- a/configuration/routes/023-approval-required.json
+++ b/configuration/routes/023-approval-required.json
@@ -21,7 +21,7 @@
       "taskModule": "salesforceApex",
       "renderer": "handlebars",
       "config": {
-        "connection": "scvoAlexSandbox",
+        "connection": "scvoMiloProduction",
         "output": "data",
         "method": "GET",
         "apexClassPath": ">data.apexUrl"
