--- a/configuration/routes/022-approval-email-send.json
+++ b/configuration/routes/022-approval-email-send.json
@@ -1,7 +1,7 @@
 {
   "name": "approval-email-send",
   "pattern": "/approval-email-send",
-  "debug": true,
+  "debug": false,
   "errorRoute": "five_hundred",
   "acceptedVerbs": "POST,GET",
   "defaultParams": {
