--- a/configuration/routes/024-approval.json
+++ b/configuration/routes/024-approval.json
@@ -1,7 +1,7 @@
 {
   "name": "approval",
   "pattern": "/user-approval",
-  "debug": true,
+  "debug": false,
   "errorRoute": "five_hundred",
   "tasks": [
     "context.metaData.commonTasks.authNotRequired",
