--- a/configuration/routes/108-no-tasks.json
+++ b/configuration/routes/108-no-tasks.json
@@ -1,7 +1,7 @@
 {
   "name": "no_tasks",
   "pattern": "/no-tasks",
-  "debug": true,
+  "debug": false,
   "errorRoute": "five_hundred",
   "metaData": {
     "title": "My volunteering"
