--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -19,7 +19,7 @@
     "url": "https://saltireawards.scot",
     "twitter": "saltireawards",
     "contacts": {
-      "admin": "support@saltireawards.scot",
+      "admin": "support@saltireawards.org.uk",
       "noreply": "no-reply@saltireawards.scot",
       "technical": "webhelpdesk@scvo.org.uk"
     },
