--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
     "start": "npm run clear-build && LIBRARY=SaltireAwards webpack --watch --env=dev",
-    "build": "npm run clear-build && npm run compile-sa-email-templates && LIBRARY=SaltireAwards webpack --env=prod",
+    "build": "npm run clear-build && npm run compile-email-templates && LIBRARY=SaltireAwards webpack --env=prod",
     "publish": "npm run build && GOOGLE_APPLICATION_CREDENTIALS=\"secret.json\" SITE=saltireawards node  ./node_modules/@scvo/common/publish.js",
     "clear-build": "rm -rf build/**",
-    "compile-sa-email-templates": "node_modules/mjml/bin/mjml configuration/emails/*mjml -o configuration/partials/emails/",
+    "compile-email-templates": "node_modules/mjml/bin/mjml configuration/emails/*mjml -o configuration/partials/emails/",
     "deploy": "./node_modules/@scvo/common/deploy.sh"
   },
   "repository": {
