--- a/configuration/routes/620-applying-for-admin.json
+++ b/configuration/routes/620-applying-for-admin.json
@@ -1,6 +1,6 @@
 {
-  "name": "set-temp-admin",
-  "pattern": "/set-temp-admin",
+  "name": "applying-for-admin",
+  "pattern": "/applying-for-admin",
   "debug": false,
   "errorRoute": "five_hundred",
   "acceptedVerbs": "GET",
