--- a/configuration/data/young-scot-settings.json
+++ b/configuration/data/young-scot-settings.json
@@ -11,5 +11,5 @@
   },
   "low-codes-reminder" : 40,
   "low-codes-reminder2" : 15,
-  "low-codes-reminder-email" : "alex.nuttgens@scvo.org.uk"
+  "low-codes-reminder-email" : "alex.nuttgens@scvo.scot"
 }
