--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -19,7 +19,7 @@
     "miloUrl": "https://milo.lightning.force.com",
     "twitter": "saltireawards",
     "contacts": {
-      "admin": "support@saltireawards.org.uk",
+      "admin": "milosupport@scvo.scot",
       "noreply": "no-reply@saltireawards.scot",
       "technical": "webhelpdesk@scvo.scot"
     },
